# nexus-mcat

./: .dprint.json  .env.example  .eslintrc.cjs  .gitignore  .mypy.ini  CONTRIBUTORS  Cargo.toml  Makefile  NOTICE.md  README.md  package.json  playwright.garden.config.ts  playwright.screenshots.config.ts  pyproject.toml  requirements-ai.txt  run
.github/workflows/: ci.yml
ai/: __init__.py  c4_metric.json  checker.py  chunk.py  client.py  config.py  corpus_text.py  cutoff.json  generate.py  grade.py  leakage.py  leakage_hooks.py  provenance.py  run_c4.py  run_cardcheck.py  run_eval.py  run_generate.py  run_injection_proof.py  sanitize.py  stt.py
ai/artifacts/: cards.jsonl
ai/baselines/: bm25.py
ai/cassettes/: c4.jsonl  checker.jsonl  eval.jsonl  generate.jsonl  injection.jsonl
ai/corpus/: README.md  sources.jsonl
ai/eval/: metrics.py  split.py
ai/gold/: split.json
ai/prompts/: checker_system.txt  generate_system.txt
ai/tests/: test_ai_off.py  test_ai_off_scores.py  test_bm25_baseline.py  test_c4_same_heldout.py  test_checker_classes.py  test_client_replay.py  test_corpus_text.py  test_cutoff_blocks.py  test_eval_reads_heldout.py  test_generation_provenance_gate.py  test_gold_disjoint.py  test_grade_buckets.py  test_grader_calibration.py  test_leakage.py  test_leakage_calibration.py  test_preflight.py  test_prompt_injection.py  test_provenance.py  test_stt.py
anki-ios/: Cargo.toml  lib.rs
anki-ios/tests/: answer_card.rs  service_indices.rs  sync_roundtrip.rs
deck_content/: DECK-PROVENANCE.md  cards.jsonl
docs/: score-mapping.md
docs/data/: mcat_taxonomy.yaml  mcat_topics.yaml
docs/mcat/: CONFLICT-RULE.md  DESKTOP-CONNECT.md  IOS-COMPANION.md  SYNC.md  TAXONOMY.md
eval_gold/: README.md  cardcheck_gold.jsonl  spoken_gold.jsonl
ftl/qt/: qt-misc.ftl
graph/: concept_graph.json  concept_graph_report.json  sidecar.json
graph/cards_gen/: _CARD_SPEC.md  cards_CARS.json  cards_FC1.json  cards_FC10.json  cards_FC2.json  cards_FC3.json  cards_FC4.json  cards_FC5.json  cards_FC6.json  cards_FC7.json  cards_FC8.json  cards_FC9.json
graph/concepts/: BB.1A.json  BB.1B.json  BB.1C.json  BB.1D.json  BB.2A.json  BB.2B.json  BB.2C.json  BB.3A.json  BB.3B.json  CARS.FOC.json  CARS.RB.json  CARS.RW.json  CP.4A.json  CP.4B.json  CP.4C.json  CP.4D.json  CP.4E.json  CP.5A.json  CP.5B.json  CP.5C.json  CP.5D.json  CP.5E.json  PS.10A.json  PS.6A.json  PS.6B.json  PS.6C.json  PS.7A.json  PS.7B.json  PS.7C.json  PS.8A.json  PS.8B.json  PS.8C.json  PS.9A.json  PS.9B.json  _index.json
graph/cross/: cross_edges.json
ios/: .gitignore
ios-app/: .gitignore  Info.plist  generate_protos.sh  project.yml  smoke_test.sh
ios-app/Bridging/: anki_ios.h
ios-app/Resources/: performance-heldout.json  taxonomy.json
ios-app/ScoreKit/: Package.swift
journey/: __init__.py  diagnostic.py  dok.py  mc_notetype.py  voice_review.py
proto/anki/: stats.proto
scores/: __init__.py  calibration.py  coverage.py  display.py  engine.py  give_up.py  heldout.py  memory.py  paraphrase.py  performance.py  readiness.py
scripts/: ai_preflight.py  assemble_topics.py  bench.py  bench_voice.py  build_concept_graph.py  build_full_deck.py  build_full_graph.py  build_gold_split.py  build_graph_sidecar.py  build_ios.sh  build_xcframework.sh  cdp_eval.mjs  dedup_corpus.py  desktop_sync_client.py  drive_review.mjs  eval_ablation.py  eval_memory.py  eval_paraphrase.py  eval_performance.py  gen_bench_deck.py  gen_mcat_deck.py  gen_spoken_variants.py  generate_service_indices.sh  generate_swift_protos.sh  layering_proof.mjs  leakage_gate.py  probe_tmp.mjs  proof_shots_tmp.mjs  run_sync_test.sh  sector_shots.mjs  ui_shot.js  verify_7b.py
scripts/service-index-dumper/: Cargo.toml
scripts/service-index-dumper/src/: main.rs
tests/: test_corpus.py  test_deck_content.py  test_starter_deck.py
tests/sync/: Cargo.toml
tests/sync/src/: lib.rs
tests/sync/tests/: sync_7b.rs
ts/: licenses.json  tsconfig.json  vite.config.ts
(+377 files in other folders)
